--- a/src/App.css
+++ b/src/App.css
@@ -3,37 +3,31 @@
   background-image: url("https://images.pexels.com/photos/850796/pexels-photo-850796.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500");
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
 .App-header {
   background-color: #222;
-  height: 150px;
+  height: 100px;
   padding: 20px;
   color: white;
 }
 
 .App-title {
-  font-size: 1.5em;
+  font-size: 50px;
 }
 
 .App-intro {
   font-size: large;
-  padding: 20px;
+  padding: 30px;
   color: navy;
 }
 
 .footer {
+  height: 50px;
   margin-top: 20px;
-  background-color: rgb(24, 21, 21);
+  background-color: #222;
+  font-size: 30px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
 @keyframes App-logo-spin {
   from {
